@@ -1,6 +1,6 @@
 useDynLib("memuse")
 
-import(methods)
+import(methods, SEXPtools)
 
 exportClasses("memuse")
 
@@ -30,5 +30,5 @@ export(
   ### Misc
   print, howbig, howbig.par, howmany, howmany.par,
   ### Approx stuff
-  approx_size
+  approx.size
 )
