@@ -1,22 +1,27 @@
-meminfo <- function(compact.free=TRUE, show.swap=FALSE)
+get.os <- function() Sys.info()[1L]
+
+
+meminfo <- function(compact.free=TRUE, show.virtual=FALSE)
 {
   out <- .Call("R_meminfo", PACKAGE="memuse")
+  
+  os <- get.os()
   
   if (any(unlist(out) == -1))
     stop("platform not supported at this time")
   
-  out <- lapply(out, function(x) {if (x == -10) NULL else x})
+#  out <- lapply(out, function(x) {if (x == -10) NULL else x})
   
   ret <- lapply(out, mu)
   
-  if (compact.free)
+  if (os == "Linux" && compact.free)
   {
     ret$freeram <- ret$freeram + ret$bufferram + ret$cachedram
     ret$bufferram <- NULL
     ret$cachedram <- NULL
   }
   
-  if (!show.swap)
+  if (os == "Linux" && !show.virtual)
   {
     ret$totalswap <- NULL
     ret$freeswap <- NULL
